tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_disallows_test_attribute_on_trait_impl_method/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: The `#[test]` attribute is disallowed on `impl` methods
   ┌─ src/main.nr:10:16
   │
10 │             fn foo() { }
   │                ---
   │

Aborting due to 1 previous error
